crates/cribo/tests/snapshots/ruff_lint_results@no_ops_multimodule_self_refs.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/no_ops_multimodule_self_refs/main.py
---
RuffLintResults {
    f401_violations: [
        "Line 5: unused-import - `os.path` imported but unused",
        "Line 8: unused-import - `sys` imported but unused",
    ],
    f404_violations: [],
    other_violations: [],
    total_violations: 2,
}
