crates/cribo/tests/snapshots/ruff_lint_results@pandera-polars.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pandera-polars/main.py
---
RuffLintResults {
    f401_violations: [
        "Line 6: unused-import - `types` imported but unused",
    ],
    f404_violations: [],
    other_violations: [],
    total_violations: 1,
}
