crates/cribo/tests/snapshots/ruff_lint_results@pyfail_class_level_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pyfail_class_level_cycles/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
